last minute specificities

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "study-timer",
+  "name": "pomodoro-clock",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/jest": "^29.5.1",
